--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
 {% endfor %}
 {% assign child_pages = include.pages | where_exp: "item", "item.url contains base_url" %}
 {% assign include.hierarchy = include.hierarchy | plus: 1 %}
-{% if include.hierarchy <= url_parts_size %}
+{% if include.hierarchy < url_parts_size %}
   {% assign base_url | concat: '/' | concat: url_parts[include.hierarchy] %}
 {% endif %}
 <ul>
