--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,9 +5,9 @@
   {% assign base_url = base_url | concat: '/' | concat: url_parts[i] %}
 {% endfor %}
 {% assign child_pages = include.pages | where_exp: "item", "item.url contains base_url" %}
-{% assign include.hierarchy = include.hierarchy | plus: 1 %}
+{% assign new_hierarchy = include.hierarchy | plus: 1 %}
 {% if include.hierarchy < url_parts_size %}
-  {% assign base_url | concat: '/' | concat: url_parts[include.hierarchy] %}
+  {% assign base_url | concat: '/' | concat: url_parts[new_hierarchy] %}
 {% endif %}
 <ul>
 {% for node in child_pages %}
@@ -15,7 +15,7 @@
     <a href='{{node.url | absolute_url }}'>{{node.title}}</a>
   </li>
   {% if node.url contains base_url %}
-    {% include nav.html pages=child_pages hierarchy=include.hierarchy %}
+    {% include nav.html pages=child_pages hierarchy=new_hierarchy %}
   {% endif %}
 {% endfor %}
 </ul>
