--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
 {% for i in (1..include.hierarchy) %}
   {% assign base_url = base_url | concat: '/' | concat: url_parts[i] %}
 {% endfor %}
-{{ base_url h}}
+{{ base_url }}
  
 
 <nav role="navigation" aria-label="Main navigation">
