--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,6 +7,11 @@
 {{ base_url }}-{{ url_parts[0] }}-{{ url_parts[1] }}
 {% assign child_pages = include.pages | where_exp: "item", "item.url contains base_url" %}
 {{ child_pages | size }}
+{% assign new_hierarchy = include.hierarchy | plus: 1 %}
+{% if include.hierarchy < url_parts_size %}
+  {% assign base_url | concat: '/' | concat: url_parts[new_hierarchy] %}
+  {{ base_url }} new hierarchy
+{% endif %}
 
  
 
