--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,23 @@
   {% assign base_url = base_url | append: '/' | append: url_parts[i] %}
 {% endfor %}
 {{ base_url }}-{{ url_parts[0] }}-{{ url_parts[1] }}
-
+{% assign child_pages = include.pages | where_exp: "item", "item.url contains base_url" %}
+{{ child_pages | size }}
+{% assign new_hierarchy = include.hierarchy | plus: 1 %}
+{% if new_hierarchy < url_parts_size %}
+  {% assign base_url = base_url | append: '/' | append: url_parts[new_hierarchy] %}
+  {{ base_url }} new hierarchy
+{% endif %}
+<ul>
+{% for node in child_pages %}
+  <li class="navigation-list-item {% if page.url == node.url %} active{% endif %}">
+    <a href='{{node.url | absolute_url }}'>{{node.title}}</a>
+  </li>
+  {% if node.url contains base_url %}
+    {% include nav.html pages=child_pages hierarchy=new_hierarchy %}
+  {% endif %}
+{% endfor %}
+</ul>
  
 
 <nav role="navigation" aria-label="Main navigation">
