--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,7 +12,7 @@
 <ul>
 {% for node in child_pages %}
   {% assign node_url_parts = node.url | split: '/' %}
-  {% assign node_url_parts_size = url_parts | size %}
+  {% assign node_url_parts_size = node_url_parts | size %}
   {% if node_url_parts_size == new_hierarchy %}
     <li class="navigation-list-item {% if page.url == node.url %} active{% endif %}">
       <a href='{{node.url | absolute_url }}'>{{node.title}}</a>
