--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,10 +10,9 @@
   {% assign base_url = base_url | append: '/' | append: url_parts[new_hierarchy] %}
 {% endif %}
 <ul>
-{% assign new_hierarchy = new_hierarchy | plus: 1 %}
 {% for node in child_pages %}
   {% assign node_url_parts = node.url | split: '/' %}
-  {% assign node_url_parts_size = node_url_parts | size %}
+  {% assign node_url_parts_size = node_url_parts | size | minus: 1%}
   {% if node_url_parts_size <= new_hierarchy %}
     <li class="navigation-list-item {% if page.url == node.url %} active{% endif %}">
       <a href='{{node.url | absolute_url }}'>{{node.title}}</a>
