--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,11 +6,13 @@
 {% endfor %}
 {% assign child_pages = include.pages | where_exp: "item", "item.url contains base_url" %}
 {% assign new_hierarchy = include.hierarchy | plus: 1 %}
+
 <ul>
 {% for node in child_pages %}
   {% assign node_url_parts = node.url | split: '/' %}
   {% assign node_url_parts_size = node_url_parts | size | minus: 1%}
-  {% if node_url_parts_size < new_hierarchy %}
+  {% assign filename = node_url_parts | last %}
+  {% if node_url_parts_size == new_hierarchy and filename != 'index.html' %}
     <li class="navigation-list-item {% if page.url == node.url %} active{% endif %}">
       <a href='{{node.url | absolute_url }}'>{{node.title}}</a>
     </li>
