--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,9 @@
 {% endfor %}
 {% assign child_pages = include.pages | where_exp: "item", "item.url contains base_url" %}
 {% assign new_hierarchy = include.hierarchy | plus: 1 %}
-
+{% if new_hierarchy < url_parts_size %}
+  {% assign base_url_children = base_url | append: '/' | append: url_parts[new_hierarchy] %}
+{% endif %}
 <ul>
 {% for node in child_pages %}
   {% assign node_url_parts = node.url | split: '/' %}
@@ -16,7 +18,7 @@
     <li class="navigation-list-item {% if page.url == node.url %} active{% endif %}">
       <a href='{{node.url | absolute_url }}'>{{node.title}}</a>
     </li>
-    {% if node.url contains base_url %}
+    {% if node.url contains base_url_children %}
       {% include nav.html pages=child_pages hierarchy=new_hierarchy %}
     {% endif %}
   {% endif %}
