--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,6 +6,8 @@
 {% endfor %}
 {% assign child_pages = include.pages | where_exp: "item", "item.url contains base_url" %}
 {% assign new_hierarchy = include.hierarchy | plus: 1 %}
+{% assign new_hierarchy_new = include.hierarchy | plus: 1 %}
+
 {% if new_hierarchy < url_parts_size %}
   {% assign base_url_children = base_url | append: '/' | append: url_parts[new_hierarchy] %}
 {% endif %}
@@ -14,7 +16,7 @@
   {% assign node_url_parts = node.url | split: '/' %}
   {% assign node_url_parts_size = node_url_parts | size | minus: 1%}
   {% assign filename = node_url_parts | last %}
-  {% if node_url_parts_size == new_hierarchy and filename != 'index.html' %}
+  {% if node_url_parts_size == new_hierarchy_new and filename != 'index.html' %}
     <li class="navigation-list-item {% if page.url == node.url %} active{% endif %}">
       <a href='{{node.url | absolute_url }}'>{{node.title}}</a>
     </li>
