--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,12 +16,12 @@
   {% assign node_url_parts = node.url | split: '/' %}
   {% assign node_url_parts_size = node_url_parts | size | minus: 1%}
   {% assign filename = node_url_parts | last %}
-  {% if node_url_parts_size == new_hierarchy_new and filename != 'index.html' %}
+  {% if node_url_parts_size == new_hierarchy and filename != 'index.html' %}
     <li class="navigation-list-item {% if page.url == node.url %} active{% endif %}">
       <a href='{{node.url | absolute_url }}'>{{node.title}}</a>
     </li>
     {% if node.url contains base_url_children %}
-      {% include nav.html pages=child_pages hierarchy=new_hierarchy %}
+      {% include nav.html pages=child_pages hierarchy=new_hierarchy_new %}
     {% endif %}
   {% endif %}
 {% endfor %}
