--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,9 +12,8 @@
 <ul>
 {% for node in child_pages %}
   {% assign node_url_parts = node.url | split: '/' %}
-  {% assign node_url_parts_size = node_url_parts | size | minus: 1%}
-  {% assign filename = node_url_parts | last %}
-  {% if node_url_parts_size == hierarchy and filename != 'index.html' %}
+  {% assign node_url_parts_size = node_url_parts | size | minus: 1 %}
+  {% if node_url_parts_size == hierarchy %}
     <li class="navigation-list-item {% if page.url == node.url %} active{% endif %}">
       <a href='{{node.url | absolute_url }}'>{{node.title}}</a>
     </li>
