--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,6 +4,7 @@
 {% for i in (1..include.hierarchy) %}
   {% assign base_url = base_url | append: '/' | append: url_parts[i] %}
 {% endfor %}
+{{ base_url }}
 {% assign child_pages = include.pages | where_exp: "item", "item.url contains base_url" %}
 {% assign hierarchy = include.hierarchy | plus: 1 %}
 {% if hierarchy < url_parts_size %}
