--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,7 +7,7 @@
 {{ base_url }}-{{url_parts}}-{{url_parts_size}}
 {% assign child_pages = include.pages | where_exp: "item", "item.url contains base_url" %}
 {% assign hierarchy = include.hierarchy | plus: 1 %}
-{% if hierarchy <= url_parts_size %}
+{% if hierarchy < url_parts_size %}
   {% assign base_url_children = base_url | append: '/' | append: url_parts[hierarchy] %}
 {% endif %}
 <ul>
@@ -18,7 +18,7 @@
     <li class="navigation-list-item {% if page.url == node.url %} active{% endif %}">
       <a href='{{node.url | absolute_url }}'>{{node.title}}</a>
     </li>
-    {% if node.url contains base_url_children %}
+    {% if hierarchy < url_parts_size nad node.url contains base_url_children %}
       {% assign new_hierarchy = include.hierarchy | plus: 1 %}
       {% include nav.html pages=child_pages hierarchy=new_hierarchy %}
     {% endif %}
