--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,6 +20,7 @@
     </li>
     {% if hierarchy < url_parts_size and node.url contains base_url_children %}
       {% assign new_hierarchy = include.hierarchy | plus: 1 %}
+      hier
       {% include nav.html pages=child_pages hierarchy=new_hierarchy %}
     {% endif %}
   {% endif %}
