--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,10 +17,12 @@
     <li class="navigation-list-item {% if page.url == node.url %} active{% endif %}">
       <a href='{{node.url | absolute_url }}'>{{node.title}}</a>
     </li>
-    {% if hierarchy <= url_parts_size and node.url contains base_url_children %}
-      {% assign new_hierarchy = include.hierarchy | plus: 1 %}
-      hier
-      {% include nav.html pages=child_pages hierarchy=new_hierarchy %}
+    {% if hierarchy <= url_parts_size %}
+    {% if node.url contains base_url_children %}
+        {% assign new_hierarchy = include.hierarchy | plus: 1 %}
+        hier
+        {% include nav.html pages=child_pages hierarchy=new_hierarchy %}
+      {% endif %}
     {% endif %}
   {% endif %}
 {% endfor %}
