--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,22 +5,22 @@
   {% assign base_url = base_url | append: '/' | append: url_parts[i] %}
 {% endfor %}
 {% assign child_pages = include.pages | where_exp: "item", "item.url contains base_url" %}
-{% assign hierarchy = include.hierarchy | plus: 1 %}
+{% assign current_hierarchy = include.hierarchy | plus: 1 %}
 0
-{% if hierarchy <= url_parts_size %}
-  {% assign base_url_children = base_url | append: '/' | append: url_parts[hierarchy] %}
+{% if current_hierarchy <= url_parts_size %}
+  {% assign base_url_children = base_url | append: '/' | append: url_parts[current_hierarchy] %}
 {% endif %}
 <ul>
 {% for node in child_pages %}
   {% assign node_url_parts = node.url | split: '/' %}
   {% assign node_url_parts_size = node_url_parts | size | minus: 1 %}
   1 {{ node_url_parts_size }}
-  {% if node_url_parts_size == hierarchy %}
+  {% if node_url_parts_size == current_hierarchy %}
     <li class="navigation-list-item {% if page.url == node.url %} active{% endif %}">
       <a href='{{node.url | absolute_url }}'>{{node.title}}</a>
     </li>
     2
-    {% if hierarchy <= url_parts_size %}
+    {% if current_hierarchy <= url_parts_size %}
       3
       {% if node.url contains base_url_children %}
         {% assign new_hierarchy = include.hierarchy | plus: 1 %}
