push navigation css

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,20 +9,20 @@
 {% if current_hierarchy <= url_parts_size %}
   {% assign base_url_children = base_url | append: '/' | append: url_parts[current_hierarchy] %}
 {% endif %}
-<ul>
+<ul class="navigation-list">
 {% for node in child_pages %}
   {% assign node_url_parts = node.url | split: '/' %}
   {% assign node_url_parts_size = node_url_parts | size | minus: 1 %}
   {% if node_url_parts_size == current_hierarchy %}
     <li class="navigation-list-item {% if page.url == node.url %} active{% endif %}">
       <a href='{{node.url | absolute_url }}'>{{node.title}}</a>
-    </li>
     {% if current_hierarchy <= url_parts_size %}
       {% if node.url contains base_url_children %}
         {% include nav.html pages=child_pages hierarchy=current_hierarchy %}
         {% assign current_hierarchy = current_hierarchy | minus: 1 %}
       {% endif %}
     {% endif %}
+    </li>
   {% endif %}
 {% endfor %}
 </ul>
