--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -7,15 +7,10 @@
   margin-bottom: 0;
   list-style: none;
 }
-
-.navigation-list-child-list {
+ul .navigation-list{
   padding-left: $sp-3;
   list-style: none;
-
-  .navigation-list-link {
-    color: $nav-child-link-color;
-  }
-
+  
   .navigation-list-item {
     position: relative;
 
@@ -33,6 +28,7 @@
       }
     }
   }
+
 }
 
 .navigation-list-item {
