--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,14 +14,23 @@
   {% assign node_url_parts = node.url | split: '/' %}
   {% assign node_url_parts_size = node_url_parts | size | minus: 1 %}
   {% if node_url_parts_size == current_hierarchy %}
-    <li class="navigation-list-item {% if page.url == node.url %} active{% endif %}">
-      <a href='{{node.url | absolute_url }}'>{{node.title}}</a>
+    {% assign active_path = false %}
+    {% assign show_children = false %}
+    {% if page.url == node.url %} 
+      {% assign active_path = true %}
+    {% endif %}
     {% if current_hierarchy <= url_parts_size %}
       {% if node.url contains base_url_children %}
+        {% assign active_path = true %}
+        {% assign show_children = true %}
+      {% endif %}
+    {% endif %}
+    <li class="navigation-list-item {% if active_path == true %}active{% endif %}">
+      <a href='{{node.url | absolute_url }}'>{{node.title}}</a>
+      {% if show_children == true %}
         {% include nav.html pages=child_pages hierarchy=current_hierarchy %}
         {% assign current_hierarchy = current_hierarchy | minus: 1 %}
       {% endif %}
-    {% endif %}
     </li>
   {% endif %}
 {% endfor %}
