--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -6,11 +6,12 @@
   margin-top: 0;
   margin-bottom: 0;
   list-style: none;
-
+  font-size: 1.5em;
 }
 ul .navigation-list{
   padding-left: $sp-3;
   list-style: none;
+  font-size: 0.9em;
 }
 .navigation-list-item .active {
   color: $body-text-color;
