--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -163,3 +163,15 @@ $nav-width: 300px;
     white-space: normal !important;
     word-wrap: normal !important;
 }
+
+.logos a {
+    background-image:none;
+}
+.logos a:hover {
+    background-image:none;
+}
+.logos a > img:hover {
+    background-color: #FD885255;
+    background-size: 100% 100%;
+    background-position: 0 0;
+}
